# helios

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEVPOST_SUBMISSION.md  HELIOS.md  LICENSE  README.md  VIDEO_SCRIPT.md
analysis/: .gitignore  README.md  _gen_screenshots.py  common.py  helios_analysis.py  pyproject.toml
analysis/html/: helios_analysis.html
backend/: .dockerignore  Dockerfile  README.md  auth.py  cache.py  caiso.py  config.py  eleven_client.py  main.py  orchestrator.py  orthogonal_client.py  pyproject.toml  schemas.py  tariffs.py  zenpower.py
backend/econ/: README.md  __init__.py  arbitrage.py  npv.py  production.py  sizing.py  types.py
backend/econ/tests/: test_arbitrage.py  test_npv.py  test_production.py
backend/routes/: geocode.py  live.py  narrate.py  parse_bill.py  roi.py  roi_stream.py  zenpower.py
backend/tests/: conftest.py  test_auth.py  test_cache.py  test_caiso.py  test_orchestrator.py  test_routes.py  test_tariffs.py  test_zenpower.py
demo/narration/: generate.py  script.txt
docs/: DEPLOY.md  ELEVENLABS.md  INFRA.md
infra/aws/: README.md  apprunner.yaml
mobile/: .env.example  App.tsx  README.md  app.config.js  app.json  babel.config.js  eas.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
mobile/scripts/: generate_icon.py  sync-dev-ip.mjs
scripts/: dev.sh
web/: .env.example  middleware.ts  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/components/: ActionHeroCard.tsx  AddressStep.tsx  BatteryGauge.tsx  BreakdownCard.tsx  CostsCard.tsx  ForecastChart.tsx  Header.tsx  ImpactCard.tsx  NPVHeroCard.tsx  (+9 more)
(+71 files in other folders)
