[project]
name = "helios-backend"
version = "0.1.0"
description = "Helios backend — solar economics agent for DataHacks 2026."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "numpy>=2.0",
    "scipy>=1.14",
    "pandas>=2.2",
    "python-multipart>=0.0.12",
    "anthropic>=0.40",
    "pdfplumber>=0.11",
    # Orthogonal has no official Python SDK — we call the REST API
    # (https://api.orthogonal.com/v1/run) directly via httpx.
    # PyJWT + cryptography for verifying Supabase-issued JWTs (optional auth).
    "pyjwt[crypto]>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["econ/tests"]
